# FuzzyAI

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICES.txt  README.md  SECURITY.MD  config_example.json  consts.py  examples.py  mypy.ini  pyproject.toml  run.py  run_mongo.sh  run_ollama.sh  utils.py  webui.py
fuzzy/: consts.py  enums.py  fuzzer.py
fuzzy/db/: mongodb.py
fuzzy/handlers/: async_batch.py  attack_manager.py  response_refinement_handler.py  sentence_similarity_analyzer.py  text_analyzer.py
fuzzy/llm/: chain.py  models.py
fuzzy/models/: base_models.py  fuzzer_result.py  prompt.py
fuzzy/notebooks/: llm_attacks_detection_methods_evaluation.ipynb
fuzzy/utils/: custom_logging_formatter.py  db.py  flavor_manager.py  utils.py
resources/: Jailbreaks.md  adv_bench_sub_gpt3.5.jsonl  adv_bench_sub_gpt4.jsonl  adv_bench_sub_gpt4_conversation.jsonl  adv_bench_sub_llama2.jsonl  adv_prompts.txt  adv_suffixes.txt  benign_prompts.txt  finetuned_summarizer_train_dataset.jsonl  harmful_behaviors.csv  harmful_hall_of_fame.csv  history_prompts.txt  http.raw  indirect_instructions_dataset.json  llama2-uncensored-prompt-response-t0.jsonl  pandoras_prompts.txt  persuasion_taxonomy.jsonl  sp_alice.model  taxonomy_gpt35_harmful_behaviors_first26.json
resources/notebooks/: llm_attacks_detection_methods_evaluation.ipynb
wiki/: attacks.html  classifiers.html  index.html  models.html  mutators.html  providers.html
wiki/attacks/: actor.html  artprompt.html  backtothepast.html  crescendo.html  dan.html  genetic.html  gptfuzzer.html  hallucinations.html  manyshot.html  (+5 more)
(+123 files in other folders)
